Test/roundingmodes/FloatOpsWithoutRoundingMode.bpl.expect
Prover error: line 33 column 124: invalid number of arguments to floating point operator

Boogie program verifier finished with 0 verified, 0 errors
